--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 ### Java template
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+out/
 
-# Package Files #
-*.jar
-*.war
-*.ear
+.idea/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Created by .ignore support plugin (hsz.mobi)
+Collection.iml
